# FishNet

./: .gitignore  CMakeLists.txt  README.md  go.mod  main.go
Client/: private.go  structs.go  tcp.go
Client/TCP/: structs.go  tcp.go
Server/: private.go  structs.go  tcp.go  utils.go
Server/TCP/: private.go  structs.go  tcp.go  utils.go
TCP/: private.go  structs.go  tcp.go  utils.go
client/: private.go  structs.go  tcp.go
includes/: sock.h  tcpserver.hpp
repo/: enum.go  utils.go
server/: private.go  tcp.go
src/: tcpserver.cpp
test/: main.cpp
